--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'yarn'
 
       - name: Install dependencies
-        run: npm install
+        run: yarn
+
+      - name: Run lint
+        run: yarn lint
 
       - name: Run tests
-        run: npm test
+        run: yarn test
