--- a/package.json
+++ b/package.json
@@ -20,17 +20,23 @@
     "@eslint/js": "^9.15.0",
     "@types/commander": "^2.12.0",
     "@types/express": "^5.0.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^22.10.0",
     "eslint": "^9.15.0",
     "globals": "^15.12.0",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.16.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "compile": "npx tsc",
     "lint": "eslint",
+    "start-local": "ts-node src/index.ts",
     "server": "node lib/api/index.js"
   },
   "engines": {
