--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,21 @@
 {
   "compilerOptions": {
-    "baseUrl": "src",
     "target": "ESNext",
     "module": "commonjs",
-    "resolveJsonModule": true,
-    "rootDir": "src",
+    "rootDir": ".",
     "outDir": "lib",
+    "baseUrl": ".",
+    "paths": {
+      "src/*": [
+        "src/*"
+      ],
+      "tests/*": [
+        "tests/*"
+      ]
+    },
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "exclude": [
-    "node_modules",
-    "lib",
-    "tests"
-  ]
 }
